projects/proof/frontend/src/index.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}
  
a {
    text-decoration: none;
}

.clickable {
    cursor: pointer;
}

.centered-container {
    flex-grow: 1;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.no-padding {
    padding: 0px !important;
}

